# Senitnal

./: .env.panel.example  .gitignore  .pre-commit-config.yaml  ADAPTER_MANIFEST_SPEC.md  ADAPTER_TRUST_NUMERICS.md  ATTENTION_WORKSPACE.md  BACKUP_STRATEGY.md  BACKUP_STRATEGY_NUMERICS.md  BOOTSTRAP_GENOME.md  BOOTSTRAP_GENOME_NUMERICS.md  CONSTITUTION.md  DEONTIC_GATE.md  INGRESS_COMPILER_NUMERICS.md  INGRESS_COMPILER_SPEC.md  MEMORY_CONTRACT.md  MEMORY_WRITE_GATE.md  MEMORY_WRITE_GATE_NUMERICS.md  NUMERICS_GOVERNANCE.md  OBSERVER_LEDGER_NUMERICS.md  OBSERVER_LEDGER_SCHEMA.md  README.md  RECALL_PROTOCOL.md  RECALL_PROTOCOL_NUMERICS.md  REPLAY_PROTOCOL.md  REPLAY_PROTOCOL_NUMERICS.md  WORLD_INGRESS.md  deepseek_proxy.py  docker-compose.panel.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: 1779390213525-tidy-eagle.md
.playwright-mcp/: page-2026-05-22T00-19-03-313Z.yml  page-2026-05-22T00-19-45-743Z.yml  page-2026-05-22T00-19-53-066Z.yml  page-2026-05-22T00-20-01-643Z.yml  page-2026-05-22T00-20-15-087Z.yml  page-2026-05-22T00-20-22-715Z.yml  page-2026-05-22T00-20-40-576Z.yml  page-2026-05-22T00-20-50-642Z.yml  page-2026-05-22T00-20-58-139Z.yml  page-2026-05-22T00-21-06-088Z.yml  page-2026-05-22T00-21-13-391Z.yml  page-2026-05-22T00-23-45-256Z.yml  page-2026-05-22T00-24-37-680Z.yml  page-2026-05-22T01-40-50-622Z.yml
data/historical/: market_history.json
docs/conversations/: 0001-neural-core-genesis.md  0002-attention-workspace.md  0003-world-ingress.md  0004-bootstrap-genome.md  0005-deontic-gate.md  0006-observer-ledger-schema.md  0007-memory-write-gate.md  0008-recall-protocol.md  0009-adapter-manifest-spec.md  0010-ingress-compiler-spec.md  0011-replay-protocol.md  0012-backup-strategy.md  0013-numerics-governance.md  0014-ingress-compiler-numerics.md  0015-replay-protocol-numerics.md  0016-memory-write-gate-numerics.md  0017-observer-ledger-numerics.md  (+5 more)
panel/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: backtest.py  daemon.py  fetch_historical.py  gelal_bridge.py  monitor.py  quick_scalper.py  run_learning_loop.py  start_all.sh  start_services.sh
sentinel/: __init__.py
tests/: conftest.py  test_public_api.py  test_skeleton.py
(+459 files in other folders)
