[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — Financial AGI core (Minimum Viable Brain)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Halit Uzun" },
]
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["sentinel", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line-too-long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert allowed in tests

# ---------------------------------------------------------------------------
# Pyright (strict type checking)
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["sentinel", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "invariant: constitutional invariant test (MVP REQUIRED)",
    "integration: multi-module integration test",
    "simulation: synthetic event end-to-end test",
]
